--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+<div class="main">
     <div class="head">
-        <h2> We are Ackermans </h2>
-        <div class="head1">
-          <div class="img1"> image 1</div>
-          <div class="mainhead1">
-            <div> We love to </div>
-            <div>
-              <p> Create</p>
-              <p> Beautify</p>
-              <p> Modify</p>
-            </div>
-            <div> Websites </div>
-          </div>
-          <div class="img2"> image2</div>
+        <div>
+            <h2> We are Ackermans </h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
-      </div>
+        <img id="img1" src="/Images/undraw_online_connection_6778.svg">
+    </div>
+    <div class="box1">
+        <h2 >What do we do?</h2>
+        <div>
+            <p>COntents</p>
+            <p>contents</p>
+        </div>
+    </div>
     
 
-
+</div>
 </body>
 </html>
